@@ -1,3 +1,4 @@
+* Use md5 hash for indexing translation
 * Merge tree and list views
 * Added autocompletion on fields.Char
 * Remove ir.default
